--- a/src/app/features/layouts/dashboard/dashboard.component.html
+++ b/src/app/features/layouts/dashboard/dashboard.component.html
@@ -1,4 +1,1 @@
-<section class="d-flex justify-content-center align-items-center min-vh-100">
-  <app-employee-registration />
-</section>
-
+<router-outlet />
