--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -8,5 +8,27 @@ $dark-gray-color: #344054;
 $green-color: #029873;
 $more-dark-gray-color: #d0d5dd;
 
+//colors badges
+$loan-color: #175cd3;
+$excuse-color: #c11574;
+$overtime-color: #363f72;
+$vacation-color: #b93815;
+$default-color: #6c757d;
+
+//color Tabs
+
+$bg-tabs-color: #f9fafb;
+$text-tabs-color: #667085;
+$bg-badge-tabs-color: #eceff3;
+$text-badge-tabs-color: #344054;
+
+//table header
+$text-table-header-color: #475467;
+
+//Status Color
+$Pending-color: #dc6803;
+$Approved-color: #039855;
+$Declined-color: #d92d20;
+
 // Font
 $font-family: "Montserrat", sans-serif;
